--- a/items/index.html
+++ b/items/index.html
@@ -118,37 +118,32 @@
 
     <option value="golden_apple">金のリンゴ</option>
     <option value="oak_log">オークの原木</option>
-
     <option value="iron_shovel">鉄のシャベル</option>
     <option value="iron_sword">鉄の剣</option>
     <option value="iron_axe">鉄の斧</option>
     <option value="iron_pickaxe">鉄のツルハシ</option>
-
     <option value="diamond_sword">ダイヤの剣</option>
     <option value="diamond_shovel">ダイヤのシャベル</option>
     <option value="diamond_axe">ダイヤの斧</option>
     <option value="diamond_pickaxe">ダイヤのツルハシ</option>
-
     <option value="bone">骨</option>
     <option value="iron_ingot">鉄インゴット</option>
-
     <option value="diamond_helmet">ダイヤ防具：頭</option>
     <option value="diamond_chestplate">ダイヤ防具：胴</option>
     <option value="diamond_leggings">ダイヤ防具：脚</option>
     <option value="diamond_boots">ダイヤ防具：足</option>
 
     <option value="wheat_seeds">小麦の種</option>
-
+    <option value="snowball">雪玉</option>
+ 　 <option value="book">本</option>
     <option value="torch">松明</option>
     <option value="coal">石炭</option>
     <option value="bucket">バケツ</option>
     <option value="water_bucket">水入りバケツ</option>
     <option value="lava_bucket">溶岩バケツ</option>
     <option value="milk_bucket">牛乳入りバケツ</option>
-
     <option value="flint_and_steel">火打ち石と打ち金</option>
     <option value="ender_pearl">エンダーパール</option>
-
     <option value="shield">盾</option>
     <option value="trident">トライデント</option>
     <option value="totem_of_undying">不死のトーテム</option>
@@ -159,29 +154,23 @@
     <option value="bread">パン</option>
     <option value="dried_kelp">干し昆布</option>
     <option value="enchanted_golden_apple">エンチャ金リンゴ</option>
-
     <option value="compass">コンパス</option>
     <option value="map">地図</option>
     <option value="clock">時計</option>
     <option value="sugar_cane">サトウキビ</option>
-
     <option value="ender_chest">エンダーチェスト</option>
     <option value="glass">ガラス</option>
     <option value="scaffolding">足場</option>
     <option value="ladder">はしご</option>
-
     <option value="brush">ブラシ</option>
     <option value="spyglass">望遠鏡</option>
-
     <option value="shulker_box">シュルカーボックス</option>
     <option value="white_wool">白の羊毛</option>
     <option value="white_carpet">白色のカーペット</option>
-
     <option value="oak_boat">ボート</option>
     <option value="lead">リード</option>
     <option value="saddle">サドル</option>
     <option value="name_tag">名札</option>
-
     <option value="firework_rocket_1">ロケット花火Lv1</option>
     <option value="firework_rocket_2">ロケット花火Lv2</option>
     <option value="firework_rocket_3">ロケット花火Lv3</option>
@@ -326,3 +315,4 @@ function copyCommand(){
 
 </body>
 </html>
+
