--- a/items/index.html
+++ b/items/index.html
@@ -129,6 +129,7 @@
 
 
 <!-- 素材 / 鉱石 -->
+<option disabled>―― 素材 / 鉱石 ――</option>
 <option value="amethyst_shard">アメジスト</option>
 <option value="gold_ingot">金インゴット</option>
 <option value="copper_ingot">銅インゴット</option>
@@ -141,6 +142,7 @@
 
 
 <!-- 木材 / ブロック -->
+<option disabled>―― 木材 / ブロック ――</option>
 <option value="scaffolding">足場</option>
 <option value="glass">ガラス</option>
 <option value="hay_block">小麦の俵</option>
@@ -151,6 +153,7 @@
 
 
 <!-- 武器 -->
+<option disabled>―― 武器 ――</option>
 <option value="bow">弓</option>
 <option value="crossbow">クロスボウ</option>
 <option value="mace">メイス</option>
@@ -160,6 +163,7 @@
 
 
 <!-- ツール -->
+<option disabled>―― ツール ――</option>
 <option value="brush">ブラシ</option>
 <option value="spyglass">望遠鏡</option>
 <option value="flint_and_steel">火打ち石と打ち金</option>
@@ -172,6 +176,7 @@
 
 
 <!-- 防具 -->
+<option disabled>―― 防具 ――</option>
 <option value="diamond_helmet">ダイヤ防具：ヘルメット</option>
 <option value="diamond_chestplate">ダイヤ防具：チェストプレート</option>
 <option value="diamond_leggings">ダイヤ防具：レギンス</option>
@@ -179,11 +184,13 @@
 <option value="shield">盾</option>
 <option value="elytra">エリトラ</option>
 
-<!-- 投擲 / 弾系 -->
+<!-- 投擲 / 弾系 -->  
+<option disabled>―― 投擲 / 弾系 ――</option>
 <option value="ender_pearl">エンダーパール</option>
 <option value="arrow">矢</option>
 
 <!-- バケツ -->
+<option disabled>―― バケツ ――</option>
 <option value="axolotl_bucket">ウーパールーパー入りバケツ</option>
 <option value="bucket">バケツ</option>
 <option value="milk_bucket">牛乳入りバケツ</option>
@@ -192,22 +199,26 @@
 
 
 <!-- 移動 -->
-<option value="ender_chest">エンダーチェスト</option>
+<option disabled>―― 移動 ――</option>
 <option value="compass">コンパス</option>
 <option value="map">地図</option>
 <option value="clock">時計</option>
 <option value="oak_boat">ボート</option>
-<option value="name_tag">名札</option>
 <option value="lead">リード</option>
 <option value="saddle">サドル</option>
 
 
 <!-- 特殊 -->
+<option disabled>―― 特殊 ――</option>
+<option value="ender_chest">エンダーチェスト</option>
 <option value="command_block">コマンドブロック</option>
 <option value="shulker_box">シュルカーボックス</option>
+<option value="name_tag">名札</option>
+
 
 
 <!-- 花火 -->
+<option disabled>―― 花火 ――</option>
 <option value="firework_rocket_1">ロケット花火Lv1</option>
 <option value="firework_rocket_2">ロケット花火Lv2</option>
 <option value="firework_rocket_3">ロケット花火Lv3</option>
@@ -374,6 +385,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
