--- a/items/index.html
+++ b/items/index.html
@@ -122,6 +122,9 @@
 <option value="golden_apple">金のリンゴ</option>
 <option value="beetroot">ビートルート</option>
 <option value="beetroot_seeds">ビートルートの種</option>
+<option value="baked_potato">焼きじゃがいも</option>
+<option value="potato">じゃがいも</option>
+<option value="carrot">にんじん</option>
 <option value="cactus">サボテン</option>
 <option value="cocoa_beans">カカオ豆</option>
 <option value="cookie">クッキー</option>
@@ -133,10 +136,9 @@
 <option value="wheat_seeds">小麦の種</option>
 <option value="hay_block">小麦の俵</option>
 <option value="cooked_beef">ステーキ</option>
-<option value="dried_kelp">乾燥させた昆布</option>
+<option value="dried_kelp">乾燥した昆布</option>
 <option value="bread">パン</option>
 <option value="cooked_porkchop">焼き豚</option>
-
 
 <!-- 素材 / 鉱石 -->
 <option disabled>―― 素材 / 鉱石 ――</option>
@@ -397,6 +399,7 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
 
